app/reader/parser/JavaExpressionParser.py
# Generated from JavaExpression.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class JavaExpressionParser ( Parser ):

    grammarFileName = "JavaExpression.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'['", "']'", "'('", "')'", "','", "'.'", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'&'", "'|'", "'^'", 
                     "'<<'", "'>>'", "'>'", "'<'", "'>='", "'<='", "'=='", 
                     "'!='", "'instanceof'", "'&&'", "'||'", "'?'", "':'", 
                     "<INVALID>", "<INVALID>", "'null'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "LPAREN", "RPAREN", 
                      "COMMA", "DOT", "PLUS", "MINUS", "MULT", "DIV", "MOD", 
                      "BITWISE_AND", "BITWISE_OR", "XOR", "SHIFT_LEFT", 
                      "SHIFT_RIGHT", "GREATER_THAN", "LESS_THAN", "GREATER_THAN_OR_EQUAL_TO", 
                      "LESS_THAN_OR_EQUAL_TO", "EQUALS", "NOT_EQUALS", "INSTANCEOF", 
                      "LOGICAL_AND", "LOGICAL_OR", "QUESTION_MARK", "COLON", 
                      "WHITESPACE", "IDENTIFIER", "NULL_LITERAL", "INTEGER_LITERAL", 
                      "FLOATING_POINT_LITERAL", "BOOLEAN_LITERAL", "CHARACTER_LITERAL", 
                      "STRING_LITERAL" ]

    RULE_expression = 0
    RULE_literal = 1
    RULE_functionCall = 2
    RULE_arguments = 3

    ruleNames =  [ "expression", "literal", "functionCall", "arguments" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    LPAREN=3
    RPAREN=4
    COMMA=5
    DOT=6
    PLUS=7
    MINUS=8
    MULT=9
    DIV=10
    MOD=11
    BITWISE_AND=12
    BITWISE_OR=13
    XOR=14
    SHIFT_LEFT=15
    SHIFT_RIGHT=16
    GREATER_THAN=17
    LESS_THAN=18
    GREATER_THAN_OR_EQUAL_TO=19
    LESS_THAN_OR_EQUAL_TO=20
    EQUALS=21
    NOT_EQUALS=22
    INSTANCEOF=23
    LOGICAL_AND=24
    LOGICAL_OR=25
    QUESTION_MARK=26
    COLON=27
    WHITESPACE=28
    IDENTIFIER=29
    NULL_LITERAL=30
    INTEGER_LITERAL=31
    FLOATING_POINT_LITERAL=32
    BOOLEAN_LITERAL=33
    CHARACTER_LITERAL=34
    STRING_LITERAL=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self):
            return self.getTypedRuleContext(JavaExpressionParser.LiteralContext,0)


        def IDENTIFIER(self):
            return self.getToken(JavaExpressionParser.IDENTIFIER, 0)

        def functionCall(self):
            return self.getTypedRuleContext(JavaExpressionParser.FunctionCallContext,0)


        def MULT(self):
            return self.getToken(JavaExpressionParser.MULT, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JavaExpressionParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(JavaExpressionParser.ExpressionContext,i)


        def LPAREN(self):
            return self.getToken(JavaExpressionParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(JavaExpressionParser.RPAREN, 0)

        def PLUS(self):
            return self.getToken(JavaExpressionParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(JavaExpressionParser.MINUS, 0)

        def DIV(self):
            return self.getToken(JavaExpressionParser.DIV, 0)

        def MOD(self):
            return self.getToken(JavaExpressionParser.MOD, 0)

        def BITWISE_AND(self):
            return self.getToken(JavaExpressionParser.BITWISE_AND, 0)

        def BITWISE_OR(self):
            return self.getToken(JavaExpressionParser.BITWISE_OR, 0)

        def XOR(self):
            return self.getToken(JavaExpressionParser.XOR, 0)

        def SHIFT_LEFT(self):
            return self.getToken(JavaExpressionParser.SHIFT_LEFT, 0)

        def SHIFT_RIGHT(self):
            return self.getToken(JavaExpressionParser.SHIFT_RIGHT, 0)

        def GREATER_THAN(self):
            return self.getToken(JavaExpressionParser.GREATER_THAN, 0)

        def LESS_THAN(self):
            return self.getToken(JavaExpressionParser.LESS_THAN, 0)

        def GREATER_THAN_OR_EQUAL_TO(self):
            return self.getToken(JavaExpressionParser.GREATER_THAN_OR_EQUAL_TO, 0)

        def LESS_THAN_OR_EQUAL_TO(self):
            return self.getToken(JavaExpressionParser.LESS_THAN_OR_EQUAL_TO, 0)

        def EQUALS(self):
            return self.getToken(JavaExpressionParser.EQUALS, 0)

        def NOT_EQUALS(self):
            return self.getToken(JavaExpressionParser.NOT_EQUALS, 0)

        def LOGICAL_AND(self):
            return self.getToken(JavaExpressionParser.LOGICAL_AND, 0)

        def LOGICAL_OR(self):
            return self.getToken(JavaExpressionParser.LOGICAL_OR, 0)

        def QUESTION_MARK(self):
            return self.getToken(JavaExpressionParser.QUESTION_MARK, 0)

        def COLON(self):
            return self.getToken(JavaExpressionParser.COLON, 0)

        def DOT(self):
            return self.getToken(JavaExpressionParser.DOT, 0)

        def INSTANCEOF(self):
            return self.getToken(JavaExpressionParser.INSTANCEOF, 0)

        def getRuleIndex(self):
            return JavaExpressionParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = JavaExpressionParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 0
        self.enterRecursionRule(localctx, 0, self.RULE_expression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 24
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 9
                self.literal()
                pass

            elif la_ == 2:
                self.state = 10
                self.match(JavaExpressionParser.IDENTIFIER)
                pass

            elif la_ == 3:
                self.state = 11
                self.functionCall()
                pass

            elif la_ == 4:
                self.state = 12
                self.match(JavaExpressionParser.IDENTIFIER)
                self.state = 13
                self.functionCall()
                pass

            elif la_ == 5:
                self.state = 14
                self.match(JavaExpressionParser.MULT)
                self.state = 15
                self.expression(26)
                pass

            elif la_ == 6:
                self.state = 16
                self.match(JavaExpressionParser.LPAREN)
                self.state = 17
                self.match(JavaExpressionParser.IDENTIFIER)
                self.state = 18
                self.match(JavaExpressionParser.RPAREN)
                self.state = 19
                self.expression(25)
                pass

            elif la_ == 7:
                self.state = 20
                self.match(JavaExpressionParser.LPAREN)
                self.state = 21
                self.expression(0)
                self.state = 22
                self.match(JavaExpressionParser.RPAREN)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 102
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 100
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                    if la_ == 1:
                        localctx = JavaExpressionParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 26
                        if not self.precpred(self._ctx, 20):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 20)")
                        self.state = 27
                        self.match(JavaExpressionParser.PLUS)
                        self.state = 28
                        self.expression(21)
                        pass

                    elif la_ == 2:
                        localctx = JavaExpressionParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 29
                        if not self.precpred(self._ctx, 19):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 19)")
                        self.state = 30
                        self.match(JavaExpressionParser.MINUS)
                        self.state = 31
                        self.expression(20)
                        pass

                    elif la_ == 3:
                        localctx = JavaExpressionParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 32
                        if not self.precpred(self._ctx, 18):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 18)")
                        self.state = 33
                        self.match(JavaExpressionParser.MULT)
                        self.state = 34
                        self.expression(19)
                        pass

                    elif la_ == 4:
                        localctx = JavaExpressionParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 35
                        if not self.precpred(self._ctx, 17):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 17)")
                        self.state = 36
                        self.match(JavaExpressionParser.DIV)
                        self.state = 37
                        self.expression(18)
                        pass

                    elif la_ == 5:
                        localctx = JavaExpressionParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 38
                        if not self.precpred(self._ctx, 16):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 16)")
                        self.state = 39
                        self.match(JavaExpressionParser.MOD)
                        self.state = 40
                        self.expression(17)
                        pass

                    elif la_ == 6:
                        localctx = JavaExpressionParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 41
                        if not self.precpred(self._ctx, 15):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 15)")
                        self.state = 42
                        self.match(JavaExpressionParser.BITWISE_AND)
                        self.state = 43
                        self.expression(16)
                        pass

                    elif la_ == 7:
                        localctx = JavaExpressionParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 44
                        if not self.precpred(self._ctx, 14):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 14)")
                        self.state = 45
                        self.match(JavaExpressionParser.BITWISE_OR)
                        self.state = 46
                        self.expression(15)
                        pass

                    elif la_ == 8:
                        localctx = JavaExpressionParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 47
                        if not self.precpred(self._ctx, 13):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 13)")
                        self.state = 48
                        self.match(JavaExpressionParser.XOR)
                        self.state = 49
                        self.expression(14)
                        pass

                    elif la_ == 9:
                        localctx = JavaExpressionParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 50
                        if not self.precpred(self._ctx, 12):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 12)")
                        self.state = 51
                        self.match(JavaExpressionParser.SHIFT_LEFT)
                        self.state = 52
                        self.expression(13)
                        pass

                    elif la_ == 10:
                        localctx = JavaExpressionParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 53
                        if not self.precpred(self._ctx, 11):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 11)")
                        self.state = 54
                        self.match(JavaExpressionParser.SHIFT_RIGHT)
                        self.state = 55
                        self.expression(12)
                        pass

                    elif la_ == 11:
                        localctx = JavaExpressionParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 56
                        if not self.precpred(self._ctx, 10):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 10)")
                        self.state = 57
                        self.match(JavaExpressionParser.GREATER_THAN)
                        self.state = 58
                        self.expression(11)
                        pass

                    elif la_ == 12:
                        localctx = JavaExpressionParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 59
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 60
                        self.match(JavaExpressionParser.LESS_THAN)
                        self.state = 61
                        self.expression(10)
                        pass

                    elif la_ == 13:
                        localctx = JavaExpressionParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 62
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 63
                        self.match(JavaExpressionParser.GREATER_THAN_OR_EQUAL_TO)
                        self.state = 64
                        self.expression(9)
                        pass

                    elif la_ == 14:
                        localctx = JavaExpressionParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 65
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 66
                        self.match(JavaExpressionParser.LESS_THAN_OR_EQUAL_TO)
                        self.state = 67
                        self.expression(8)
                        pass

                    elif la_ == 15:
                        localctx = JavaExpressionParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 68
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 69
                        self.match(JavaExpressionParser.EQUALS)
                        self.state = 70
                        self.expression(7)
                        pass

                    elif la_ == 16:
                        localctx = JavaExpressionParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 71
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 72
                        self.match(JavaExpressionParser.NOT_EQUALS)
                        self.state = 73
                        self.expression(6)
                        pass

                    elif la_ == 17:
                        localctx = JavaExpressionParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 74
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 75
                        self.match(JavaExpressionParser.LOGICAL_AND)
                        self.state = 76
                        self.expression(5)
                        pass

                    elif la_ == 18:
                        localctx = JavaExpressionParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 77
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 78
                        self.match(JavaExpressionParser.LOGICAL_OR)
                        self.state = 79
                        self.expression(4)
                        pass

                    elif la_ == 19:
                        localctx = JavaExpressionParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 80
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 81
                        self.match(JavaExpressionParser.QUESTION_MARK)
                        self.state = 82
                        self.expression(0)
                        self.state = 83
                        self.match(JavaExpressionParser.COLON)
                        self.state = 84
                        self.expression(3)
                        pass

                    elif la_ == 20:
                        localctx = JavaExpressionParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 86
                        if not self.precpred(self._ctx, 24):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 24)")
                        self.state = 87
                        self.match(JavaExpressionParser.DOT)
                        self.state = 88
                        self.match(JavaExpressionParser.IDENTIFIER)
                        pass

                    elif la_ == 21:
                        localctx = JavaExpressionParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 89
                        if not self.precpred(self._ctx, 23):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 23)")
                        self.state = 90
                        self.match(JavaExpressionParser.DOT)
                        self.state = 91
                        self.functionCall()
                        pass

                    elif la_ == 22:
                        localctx = JavaExpressionParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 92
                        if not self.precpred(self._ctx, 21):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 21)")
                        self.state = 93
                        self.match(JavaExpressionParser.T__0)
                        self.state = 94
                        self.expression(0)
                        self.state = 95
                        self.match(JavaExpressionParser.T__1)
                        pass

                    elif la_ == 23:
                        localctx = JavaExpressionParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 97
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 98
                        self.match(JavaExpressionParser.INSTANCEOF)
                        self.state = 99
                        self.match(JavaExpressionParser.IDENTIFIER)
                        pass

             
                self.state = 104
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class LiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER_LITERAL(self):
            return self.getToken(JavaExpressionParser.INTEGER_LITERAL, 0)

        def FLOATING_POINT_LITERAL(self):
            return self.getToken(JavaExpressionParser.FLOATING_POINT_LITERAL, 0)

        def BOOLEAN_LITERAL(self):
            return self.getToken(JavaExpressionParser.BOOLEAN_LITERAL, 0)

        def CHARACTER_LITERAL(self):
            return self.getToken(JavaExpressionParser.CHARACTER_LITERAL, 0)

        def STRING_LITERAL(self):
            return self.getToken(JavaExpressionParser.STRING_LITERAL, 0)

        def NULL_LITERAL(self):
            return self.getToken(JavaExpressionParser.NULL_LITERAL, 0)

        def getRuleIndex(self):
            return JavaExpressionParser.RULE_literal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLiteral" ):
                listener.enterLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLiteral" ):
                listener.exitLiteral(self)




    def literal(self):

        localctx = JavaExpressionParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_literal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 67645734912) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionCallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(JavaExpressionParser.IDENTIFIER, 0)

        def LPAREN(self):
            return self.getToken(JavaExpressionParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(JavaExpressionParser.RPAREN, 0)

        def arguments(self):
            return self.getTypedRuleContext(JavaExpressionParser.ArgumentsContext,0)


        def getRuleIndex(self):
            return JavaExpressionParser.RULE_functionCall

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionCall" ):
                listener.enterFunctionCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionCall" ):
                listener.exitFunctionCall(self)




    def functionCall(self):

        localctx = JavaExpressionParser.FunctionCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_functionCall)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(JavaExpressionParser.IDENTIFIER)
            self.state = 108
            self.match(JavaExpressionParser.LPAREN)
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 68182606344) != 0):
                self.state = 109
                self.arguments()


            self.state = 112
            self.match(JavaExpressionParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JavaExpressionParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(JavaExpressionParser.ExpressionContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(JavaExpressionParser.COMMA)
            else:
                return self.getToken(JavaExpressionParser.COMMA, i)

        def getRuleIndex(self):
            return JavaExpressionParser.RULE_arguments

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArguments" ):
                listener.enterArguments(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArguments" ):
                listener.exitArguments(self)




    def arguments(self):

        localctx = JavaExpressionParser.ArgumentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_arguments)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.expression(0)
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 115
                self.match(JavaExpressionParser.COMMA)
                self.state = 116
                self.expression(0)
                self.state = 121
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[0] = self.expression_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expression_sempred(self, localctx:ExpressionContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 20)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 19)
         

            if predIndex == 2:
                return self.precpred(self._ctx, 18)
         

            if predIndex == 3:
                return self.precpred(self._ctx, 17)
         

            if predIndex == 4:
                return self.precpred(self._ctx, 16)
         

            if predIndex == 5:
                return self.precpred(self._ctx, 15)
         

            if predIndex == 6:
                return self.precpred(self._ctx, 14)
         

            if predIndex == 7:
                return self.precpred(self._ctx, 13)
         

            if predIndex == 8:
                return self.precpred(self._ctx, 12)
         

            if predIndex == 9:
                return self.precpred(self._ctx, 11)
         

            if predIndex == 10:
                return self.precpred(self._ctx, 10)
         

            if predIndex == 11:
                return self.precpred(self._ctx, 9)
         

            if predIndex == 12:
                return self.precpred(self._ctx, 8)
         

            if predIndex == 13:
                return self.precpred(self._ctx, 7)
         

            if predIndex == 14:
                return self.precpred(self._ctx, 6)
         

            if predIndex == 15:
                return self.precpred(self._ctx, 5)
         

            if predIndex == 16:
                return self.precpred(self._ctx, 4)
         

            if predIndex == 17:
                return self.precpred(self._ctx, 3)
         

            if predIndex == 18:
                return self.precpred(self._ctx, 2)
         

            if predIndex == 19:
                return self.precpred(self._ctx, 24)
         

            if predIndex == 20:
                return self.precpred(self._ctx, 23)
         

            if predIndex == 21:
                return self.precpred(self._ctx, 21)
         

            if predIndex == 22:
                return self.precpred(self._ctx, 1)
         




